--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,14 @@
       <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+<style>
+  html,body{
+    font-weight: 200;
+    font-size: 1.2em;
+    margin: 0 !important;
+    background-color: #f9f9f9;
+  }
+</style>
   <body class="mat-typography">
     <app-root></app-root>
   </body>
