--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,19 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <style>
-  html,body{
+  html, body {
     font-weight: 200;
     font-size: 1.2em;
     margin: 0 !important;
     background-color: #f9f9f9;
+    min-height: 100vh;
+    height: auto;
+    margin: 0;
+    overflow: auto;
   }
 </style>
   <body class="mat-typography">
-    <app-root></app-root>
+
+      <app-root ></app-root>
   </body>
 </html>
